name:                haskell-bbcode-parser
version:             0.1.0.2
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-bbcode-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BBCode
                       Data.BBCode.Emoticon
                       Data.BBCode.Parser
                       Data.BBCode.Types
                       Data.BBCode.Internal
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bimap
                     , containers
                     , mtl
                     , text
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite haskell-bbcode-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.BBCode.ParserSpec
                       Data.BBCode.TypesSpec
  build-depends:       base
                     , containers
                     , hspec
                     , text
                     , haskell-bbcode-parser
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-bbcode-parser
